[gd_scene load_steps=9 format=3 uid="uid://ctid3jy7wisu"]

[ext_resource type="Script" path="res://scripts/GUI/HeadUpDisplay.gd" id="1_xcm3r"]
[ext_resource type="Texture2D" uid="uid://bvj5u8cmsp3y" path="res://sprites/GUI/HealthBar/health_under.png" id="2_2ft15"]
[ext_resource type="Texture2D" uid="uid://d4agdq56wc6bj" path="res://sprites/Coin/GoldCoinSpinning.png" id="2_7bple"]
[ext_resource type="Texture2D" uid="uid://cfm2ofqfve50h" path="res://sprites/GUI/HealthBar/health_progress.png" id="3_1w3jj"]
[ext_resource type="Texture2D" uid="uid://5xmc6t4kjwf4" path="res://sprites/GUI/QteTimer/timer_under.png" id="4_pj6m4"]
[ext_resource type="Texture2D" uid="uid://c2h8u3ndis22g" path="res://sprites/GUI/QteTimer/timer_progress.png" id="5_x3vjt"]
[ext_resource type="Texture2D" uid="uid://bmevo6iorgsjt" path="res://sprites/sword_in_the_dirt.png" id="7_srb8r"]

[sub_resource type="LabelSettings" id="LabelSettings_o1vcf"]
font_size = 32

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xcm3r")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HealthContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HealthContainer"]
custom_minimum_size = Vector2(208, 32)
layout_mode = 2

[node name="TextureUnder" type="TextureRect" parent="MarginContainer/VBoxContainer/HealthContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2ft15")

[node name="HealthUnder" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/HealthContainer/Control"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
step = 0.1
value = 40.0
nine_patch_stretch = true
texture_progress = ExtResource("3_1w3jj")

[node name="Health" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/HealthContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
step = 0.1
value = 20.0
nine_patch_stretch = true
texture_progress = ExtResource("3_1w3jj")

[node name="QteTimerContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/QteTimerContainer"]
custom_minimum_size = Vector2(180, 32)
layout_mode = 2

[node name="TextureUnder" type="TextureRect" parent="MarginContainer/VBoxContainer/QteTimerContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_pj6m4")

[node name="QteTimerUnder" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/QteTimerContainer/Control"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
step = 0.1
value = 40.0
nine_patch_stretch = true
texture_progress = ExtResource("5_x3vjt")

[node name="QteTimer" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/QteTimerContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
step = 0.1
value = 20.0
nine_patch_stretch = true
texture_progress = ExtResource("5_x3vjt")

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="CoinContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 0

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/CoinContainer"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="CoinIcon" type="Control" parent="MarginContainer/VBoxContainer/CoinContainer"]
clip_contents = true
custom_minimum_size = Vector2(32, 8)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/CoinContainer/CoinIcon"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 751.0
grow_vertical = 2
texture = ExtResource("2_7bple")
stretch_mode = 5

[node name="CoinLabel" type="Label" parent="MarginContainer/VBoxContainer/CoinContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "x 1"
label_settings = SubResource("LabelSettings_o1vcf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sword" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
y_sort_enabled = true
layout_mode = 1
offset_left = 161.0
offset_top = -7.0
offset_right = 193.0
offset_bottom = 25.0
scale = Vector2(5, 5)
texture = ExtResource("7_srb8r")
